trunk/Archive2/c5/c6ab317d38065c/output
main.cpp:14:33: error: type 'float' cannot be narrowed to 'decltype(Der<float>::val)' (aka 'int') in initializer list [-Wc++11-narrowing]
    decltype(Der<float>::val) i{0.0f};
                                ^~~~
main.cpp:14:33: note: insert an explicit cast to silence this issue
    decltype(Der<float>::val) i{0.0f};
                                ^~~~
                                static_cast<T>( )
1 error generated.
